feat(dop): refactoring